--- a/partesql/DockerFile
+++ b/partesql/DockerFile
@@ -1,7 +1,3 @@
-FROM mysql/mysql-server:8.0.2
+FROM mysql/mysql-server
 
-USER root
-
-ENV MYSQL_ROOT_PASSWOORD=123123
-
-COPY ./partesql/config.sql /docker-entrypoint-initdb.d/
+COPY conifg.sql .
